# venturalitica-sdk-samples

./: .gitignore  LICENSE  README.md  check_setup.py  pyproject.toml
.scenario-template/: README.md  STRUCTURE.md
datasets/: download_datasets.py  download_real_data.py  pyproject.toml
datasets/health/: heart_disease.csv  risk_data.csv
datasets/hiring/: prepare_hiring_data.py  salary_data.csv
datasets/llm/: crows_pairs_cached.csv  crows_pairs_sample.csv
datasets/loan/: README.md  german_credit.csv  german_credit_v1.csv  german_credit_v2.csv  model_v2.joblib  prepare_data.py  prepare_german_credit.py  pyproject.toml  scaler_v1.joblib
datasets/loan/v1/: test.csv  train.csv  validation.csv
datasets/loan/v2/: test.csv  train.csv  validation.csv
datasets/surgery/: tcia_sample.csv
datasets/vision/: README.md  fairface_sample.csv
datasets/vision/fairface_cache/: metadata.csv
policies/bias/: README.md  llm-fairness.oscal.yaml
policies/health/: clinical-risk-enhanced.oscal.yaml  clinical-risk.oscal.yaml  data-quality.oscal.yaml
policies/hiring/: data-quality.oscal.yaml  hiring-bias-enhanced.oscal.yaml  hiring-bias.oscal.yaml
policies/loan/: governance-baseline.oscal.yaml  governance-enhanced.oscal.yaml  risks.oscal.yaml
policies/medical/: dicom-governance.oscal.yaml
policies/vision/: fairness.oscal.yaml
scenarios/health-clearml-sklearn/: train.py
scenarios/hiring-wandb-torch/: train.py
scenarios/loan-credit-scoring/: .env.example  .gitignore  00_engineer_policy.ipynb  00_minimal.ipynb  01_governance_audit.ipynb  01_integrator_mlops.ipynb  02_metrics_deep_dive.py  03_mlops_integration.py  04_production_wrapper.py  CONCEPTS.md  README.md  TUTORIAL.md  batch_annex_gen.py  bom.json  data_policy.oscal.yaml  debug_alia_crash.py  debug_hf.py  generate_annex_iv.py  model_policy.oscal.yaml  policy_checks.py  prepare_data.py  push_cmd.sh  pyproject.toml  risks.oscal.yaml  train.py  train_v1.py  train_v2.py  verify_annex_gen.py  verify_transparency.py
scenarios/loan-credit-scoring/policies/loan/: risks.oscal.yaml
scenarios/loan-credit-scoring/tests/: conftest.py  test_smoke.py
scenarios/loan-mlflow-sklearn/: README.md  pyproject.toml  train.py
scenarios/medical-spine-segmentation/: .gitignore  00_annex_iv_gen.ipynb  01_model_evaluation.py  README.md  compliance_suite.py  debug_loaders.py  debug_mask_alignment.py  generate_audit_plots.py  inspect_dicom_alignment.py  pyproject.toml  regenerate_metadata.py  risks.oscal.yaml  test_bundle.py  viz_utils.py
scenarios/medical-spine-segmentation/policies/medical/: fairness.oscal.yaml
scenarios/vision-fairness/: .gitignore  00_glassbox_trace.ipynb  01_data_governance.py  02_model_training.py  03_advanced_metrics.py  README.md  debug_audit.py  debug_metric_impl.py  model_params.py  paper_content.txt  prepare_data.py  pyproject.toml
scenarios/vision-fairness/policies/vision/: data_bias.oscal.yaml  fairness.oscal.yaml  fairness_age.oscal.yaml  fairness_gender.oscal.yaml  fairness_intersectional.oscal.yaml  fairness_race.oscal.yaml
scripts/: generate_multi_collection_paper.py
