[project]
name = "venturalitica-sdk-samples-datasets"
version = "0.1.0"
description = "Real-data downloads for Venturalitica SDK samples"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "nbiatoolkit>=1.3.0",  # TCIA metadata download
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
