[project]
name = "loan-credit-scoring"
version = "0.1.0"
description = "Core Scenario 1: Loan Approval Fairness - Credit scoring with demographic parity audit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.3.0",
    "mlflow>=3.8.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.10.0",
    "PyYAML>=6.0.1",
    "venturalitica",
    "fairlearn>=0.10.0",
    "ucimlrepo>=0.0.7",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "accelerate>=1.12.0",
    "huggingface-hub>=0.36.0",
    "typer>=0.21.1",
]
[tool.uv.sources]
venturalitica = { path = "../../../packages/venturalitica-sdk", editable = true }
